[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/bg.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/bg_gray.png" type="Texture" id=2]
[ext_resource path="res://scripts/background1.gd" type="Script" id=3]
[ext_resource path="res://scenes/CanvasLayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Main.gd" type="Script" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="background1A" type="Sprite" parent="."]
scale = Vector2( 52.5, 75 )
texture = ExtResource( 1 )
centered = false
script = ExtResource( 3 )

[node name="background1B" type="Sprite" parent="."]
position = Vector2( 0, 600 )
scale = Vector2( 52.5, 75 )
texture = ExtResource( 1 )
centered = false
script = ExtResource( 3 )

[node name="background2" type="Sprite" parent="."]
position = Vector2( 0, 1200 )
scale = Vector2( 52.5, 75 )
texture = ExtResource( 2 )
centered = false

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartScroll" type="Timer" parent="."]
one_shot = true

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
